--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -28,9 +28,9 @@ platforms:
 suites:
   - name: default
     run_list:
-      - recipe[yum::default]
-      - recipe[yum_test::test_globalconfig_two]
-    excludes: fedora-latest
+     # - recipe[yum::default]
+     # - recipe[yum_test::test_globalconfig_two]
+    #excludes: fedora-latest
   - name: dnf_compat
     run_list:
       - recipe[yum::dnf_yum_compat]
